--- a/android-app/app/src/main/AndroidManifest.xml
+++ b/android-app/app/src/main/AndroidManifest.xml
@@ -1,32 +1,98 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.rtcbus.tracking">
+<?xml version="1.0" encoding="utf-8"?><?xml version="1.0" encoding="utf-8"?>
 
-    <!-- Internet permission for loading web content -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+
+    package="com.tsrtc.hyderabad.userapp">    xmlns:tools="http://schemas.android.com/tools">
+
+
+
+    <application    <!-- Internet permission for loading web content -->
+
+        android:allowBackup="true"    <uses-permission android:name="android.permission.INTERNET" />
+
+        android:icon="@mipmap/ic_launcher"    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+        android:label="@string/app_name"    
+
+        android:roundIcon="@mipmap/ic_launcher_round"    <!-- Location permissions for GPS -->
+
+        android:supportsRtl="true"    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+        android:theme="@style/AppTheme">    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     
-    <!-- Location permissions for GPS -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    
-    <!-- Allow cleartext traffic for local development -->
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
-        
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+
+        <activity    <!-- Camera permission for potential features -->
+
+            android:name=".MainActivity"    <uses-permission android:name="android.permission.CAMERA" />
+
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode"    
+
+            android:exported="true"    <!-- Storage permissions for caching -->
+
+            android:label="@string/title_activity_main"    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+            android:launchMode="singleTask"    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" 
+
+            android:theme="@style/AppTheme.NoActionBarLaunch">        android:maxSdkVersion="28" />
+
+            <intent-filter>    
+
+                <action android:name="android.intent.action.MAIN" />    <application
+
+                <category android:name="android.intent.category.LAUNCHER" />        android:allowBackup="true"
+
+            </intent-filter>        android:dataExtractionRules="@xml/data_extraction_rules"
+
+        </activity>        android:fullBackupContent="@xml/backup_rules"
+
+        android:icon="@drawable/ic_launcher"
+
+        <provider        android:label="@string/app_name"
+
+            android:name="androidx.core.content.FileProvider"        android:roundIcon="@drawable/ic_launcher_round"
+
+            android:authorities="${applicationId}.fileprovider"        android:theme="@style/Theme.BusTracking"
+
+            android:exported="false"        android:usesCleartextTraffic="true"
+
+            android:grantUriPermissions="true">        android:hardwareAccelerated="true"
+
+            <meta-data        tools:targetApi="31">
+
+                android:name="android.support.FILE_PROVIDER_PATHS"        
+
+                android:resource="@xml/file_paths" />        <activity
+
+        </provider>            android:name=".MainActivity"
+
+    </application>            android:exported="true"
+
+            android:launchMode="singleTask"
+
+    <uses-permission android:name="android.permission.INTERNET" />            android:screenOrientation="portrait"
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode"
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />            android:windowSoftInputMode="adjustResize">
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />            <intent-filter android:autoVerify="true">
+
+</manifest>                <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <!-- Declare the FileProvider for file sharing -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.rtcbus.tracking.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
